# CudaTextureGen

./: .clang-format  .cmake-format.yaml  .gitattributes  .gitignore  .gitmodules  BUILD copy.ps1  BUILD.ps1  BUILD.sh  BUILD_AND_PACKAGE.ps1  BUILD_AND_RUN.sh  BUILD_AND_TEST.ps1  BUILD_AND_TEST.sh  CLEAR_BUILD.ps1  CLEAR_BUILD.sh  CMakeLists.txt  COPY_BINARIES_TO_RELEASE.ps1  COPY_BINARIES_TO_RELEASE.sh  COPY_TO_LIB.ps1  COPY_TO_RELEASE.ps1  COPY_TO_RELEASE.sh  FIND_MSVC_COMPILER.ps1  GET_TOOLS.sh  GIT_COMMANDS.md  GIT_PUSH_NOTES.md  GODOT_PROJECT.ps1  LICENSE  POWERSHELL7_TEST.ps1  README.md  README_COMMANDS.md  README_NOTES.md  README_WINDOWS.md  RUN.sh  TEST.ps1  TEST.sh  compile_flags.txt  cuda_hello_bootstrap.py  erosion.settings.json  image_import_erode.py  pyproject.toml  python_bootstrap.py  (+5 more)
WORKING_ON_WINDOWS/: BUILD.ps1  BUILD.ps1.BACKUP  toolchain-msvc.cmake
core/: README.md  core.h  cuda_types.cuh  logging.h  macros.h  math_utils.h  python_helper.h  types.h
core/cuda/: device_array.cuh  stream.cuh
core/cuda_types/: cuda_array_2d copy.cuh.BACKUP  cuda_array_2d.cuh  cuda_array_manager.cuh  cuda_stream.cuh  cuda_struct.cuh
core/types/: array_2d.h
demo_results/: erosion.settings.json
dev/: BUILD.py  COPY_BINARIES_TO_RELEASE.ps1  CRTP_Notes.md  FIND_MSVC_COMPILER.ps1  POSIX_TO_PYTHON.sh  PYTHON_RECOMMENDED_PACKAGES.sh  PYTHON_UPGRADE.ps1
dev/WORKING_COMPILE_251105_CONTAINS_NOTES/: CMakeLists copy.txt
dev/dll_experiment/: README.md
dev/system_monitor/: gpu_monitor.py  monitor_bars.py
docs/: README.md  linux-build.md  windows-build.md
docs/dev/: GIT_COMMANDS.md  NOTES.md  README.md  README_COMMANDS.md
godot/: README.md
godot/cuda_texture_gen/: .gitignore  Cuda Texture Gen.csproj  Cuda Texture Gen.sln  project.godot  vhs.gdshader  vhs.gdshader.uid
include/: ambient_occlusion.cuh  bindable.h  c_noise_generator.cuh  core_api.h  cuda_hello.cuh  erosion.cuh  erosion.cuh_BACKUP  erosion.h  erosion2.cuh  erosion3.cuh  erosion4.cuh  fluid_simulation.cuh  noise.cuh  noise_generator.cuh  noise_generator_c.cuh  noise_generator_d.cuh  noise_util.cuh  resample.cuh  shader_maps.cuh  shader_maps.h  shader_maps_c.cuh  tectonics.cuh  template_class.cuh  template_class.h  template_class2.cuh  template_class_2.cuh  template_class_3.cuh  tests.cuh  x_template_test.cuh
include/x_template/: x_template.cuh
kernels/: notes.cuh  simple_erode.cuh
lib/: COPY_BINARIES_TO_RELEASE.ps1  COPY_BINARIES_TO_RELEASE.sh  ErosionRunner.py  ErosionRunner_OLD.py  GENERATE_STUB.ps1  IslandGenerator.py  LayerMaker.py  PYTHON_RECOMMENDED_PACKAGES.ps1  README.md  charts.py  generate_random_numbers.py  node_editor_qt.py  node_editor_qt.save.json  python_daemon.py  python_daemon_test.py  test.py  test_device_array.py  test_device_array_n.py  test_erosion10.py  test_erosion7.py  test_erosion7_ob.py  test_erosion8.py  test_erosion9.py  test_fluid_sim.py  test_gna_base.py  test_gnc_drawing.py  test_gnc_erosion.py  test_gnc_noise.py  test_gnc_water.py  test_gui.py  test_island_gen.py  test_noise.py
lib/_JUNK/: test_erosion5.py  test_noise copy.py
notes/: IDEAS.md  NOTES.md  README_COMMANDS.md  README_WINDOWS.md
python/: CMakeLists.txt  README.md  bindings.cpp
python/bindings/: ambient_occlusion.bind.h  bindable.h  blur.bind.h  erosion.bind.h  erosion2.bind.h  erosion3.bind.h  erosion4.bind.h  fluid_simulation.bind.h  noise.bind.h  noise_generator.bind.h  python_helper.cpp  python_helper.h  resample.bind.h  shader_maps.bind.cpp  shader_maps.bind.h  shader_maps_c.bind.cpp  shader_maps_c.bind.h  tectonics.bind.h  template_class.bind.h  template_class2.bind.h  template_class_2.bind.h  template_class_3.bind.h  template_macros_undef.h  tests.bind.h
python/bindings/python_helper/: numpy_array_helper.h
python/bindings/x_template/: x_template.bind.h
scripts/: README.md  basic_test.py  generate_fastnoiselite.py  heightmap_gradient.py  image_erode.py  image_import_blur.py  image_import_erode.py  python_bootstrap.py  python_upgrade.ps1  test.py  test.sh  test_OLD.py  test_erosion4.py  test_erosion5.py  tools.py
src/: README.md  ambient_occlusion.cu  blur.cu  blur.cu.OLD_2D  c_noise_generator.cu  cuda_hello.cu  erosion.cu  erosion.cu.TEMPLATE_OLD  erosion2.cu  erosion3.cu  erosion4.cu  fluid_simulation.cu  hello copy.cu  hello.cu  hello.cu.OLD  hello_main.cpp  noise.cu  noise_generator.cu  noise_generator_c.cu  noise_generator_d.cu  resample.cu  scale_kernel.cu  shader_maps.cpp  shader_maps.cu  shader_maps_c.cu  tectonics.cu  template_class.cu  template_class2.cu  template_class_2.cu  template_class_3.cu
src/python/: CMakeLists.txt  bindings.cpp
src/python/bindings/: README.md  blur.bind.h  device_array.bind.h  edge_feather.bind.h  erosion10.bind.h  erosion4.bind.h  erosion5.bind.h  erosion6.bind.h  erosion7.bind.h  erosion8.bind.h  erosion9.bind.h  fluid_simulation.bind.h  gna_device_array.bind.h  gna_graph_node.bind.h  misc.bind.h  nanobind_helper.h  noise.bind.h  noise3d.bind.h  noise_generator.bind.h  py_native_object_test.h  python_helper.h  resample.bind.h  shader_maps.bind.h  tectonics.bind.h  template_class_3.bind.h  template_class_4.bind.h  template_d_test.bind.h  template_darray_1.bind.h  template_darray_2.bind.h  template_macros_undef.h  tests.bind.h  x_template_test.bind.h
src/python/bindings/core/cuda/: device_array.bind.h  stream.bind.h
src/python/bindings/gna/: README.md  gna_base.bind.h  gna_base.cu  gna_base.cuh  gna_example.bind.h  gna_example.cu  gna_example.cuh
src/python/bindings/gnb/: gnb_example.bind.h
src/python/bindings/gnc/: gnc.bind.h
src/python/bindings/nanobind_helper/: array_nd.h  bind_dynamic_properties.h  device_array.h  device_array_n.h  float2_typecaster.h  nb_object_to_any.h  numpy.h  ref.h  ref_typecaster.h  typecasters.h  vector.h
src/python/bindings/nanobind_helper/typecasters/: cuda_array.h  cuda_vector.h
src/python/bindings/python_helper/: array_nd.h  device_array.h  numpy.h  numpy_array.h  numpy_array_helper.h  vector.h
src/python/bindings/x_template/: x_template.bind.h
tests/: README.md  hello_test.cpp  tiled_image_test.html
(+319 files in other folders)
